--- a/Dev/ACL4SSR_Online_Full.ini
+++ b/Dev/ACL4SSR_Online_Full.ini
@@ -12,6 +12,12 @@
 ;游戏平台：支持
 
 ;设置规则标志位
+ruleset=🧐 开发学习,https://raw.githubusercontent.com/itbencn/ACL4SSR/dev/Dev/Code.list
+ruleset=🧐 开发学习,https://raw.githubusercontent.com/itbencn/ACL4SSR/dev/Dev/Server.list
+ruleset=🧐 开发学习,https://raw.githubusercontent.com/itbencn/ACL4SSR/dev/Dev/Vpn.list
+ruleset=🧐 开发学习,https://raw.githubusercontent.com/itbencn/ACL4SSR/dev/Dev/Other.list
+ruleset=🤡 人工智能,https://raw.githubusercontent.com/itbencn/ACL4SSR/dev/Dev/Ai.list
+ruleset=💻 远程桌面,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/RemoteDesktop.list
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/LocalAreaNetwork.list
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/UnBan.list
 ruleset=🛑 广告拦截,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/BanAD.list
@@ -24,7 +30,6 @@ ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/mast
 ruleset=Ⓜ️ 微软服务,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/OneDrive.list
 ruleset=Ⓜ️ 微软服务,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Microsoft.list
 ruleset=🍎 苹果服务,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Apple.list
-ruleset=💻 远程桌面,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/RemoteDesktop.list
 ruleset=📲 电报消息,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Telegram.list
 ruleset=🎮 游戏平台,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Epic.list
 ruleset=🎮 游戏平台,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Sony.list
@@ -43,11 +48,6 @@ ruleset=👔 国外社交,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/mast
 ruleset=👔 国外社交,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Line.list
 ruleset=👔 国外社交,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/LineTV.list
 ruleset=🌐 全球代理,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ProxyGFWlist.list
-ruleset=🧐 开发学习,https://raw.githubusercontent.com/itbencn/ACL4SSR/dev/Dev/Code.list
-ruleset=🧐 开发学习,https://raw.githubusercontent.com/itbencn/ACL4SSR/dev/Dev/Server.list
-ruleset=🧐 开发学习,https://raw.githubusercontent.com/itbencn/ACL4SSR/dev/Dev/Vpn.list
-ruleset=🧐 开发学习,https://raw.githubusercontent.com/itbencn/ACL4SSR/dev/Dev/Other.list
-ruleset=🤡 人工智能,https://raw.githubusercontent.com/itbencn/ACL4SSR/dev/Dev/Ai.list
 ;ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaIp.list
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaDomain.list
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaCompanyIp.list
@@ -61,9 +61,9 @@ ruleset=🐟 漏网之鱼,[]FINAL
 custom_proxy_group=🚀 节点选择`select`[]♻️ 自动选择`[]📌 手动切换`[]DIRECT
 custom_proxy_group=📌 手动切换`select`.*
 custom_proxy_group=♻️ 自动选择`url-test`.*`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🧐 开发学习`select`[]🚀 节点选择`[]♻️ 自动选择`[]📌 手动切换`[]DIRECT
-custom_proxy_group=🤡 人工智能`select`[]🚀 节点选择`[]♻️ 自动选择`[]📌 手动切换`[]DIRECT
-custom_proxy_group=💻 远程桌面`select`[]DIRECT`[]🚀 节点选择`[]♻️ 自动选择`[]📌 手动切换
+custom_proxy_group=🧐 开发学习`select`[]🚀 节点选择`[]♻️ 自动选择`[]📌 手动切换`[]DIRECT`.*
+custom_proxy_group=🤡 人工智能`select`[]🚀 节点选择`[]♻️ 自动选择`[]📌 手动切换`[]DIRECT`.*
+custom_proxy_group=💻 远程桌面`select`[]DIRECT`[]🚀 节点选择`[]♻️ 自动选择`[]📌 手动切换`.*
 custom_proxy_group=📢 谷歌服务`select`[]🚀 节点选择`[]♻️ 自动选择`[]📌 手动切换`[]DIRECT
 custom_proxy_group=📲 电报消息`select`[]🚀 节点选择`[]♻️ 自动选择`[]📌 手动切换`[]DIRECT
 custom_proxy_group=📺 国外媒体`select`[]🚀 节点选择`[]♻️ 自动选择`[]📌 手动切换`[]DIRECT
