--- a/Dev/ACL4SSR_Online_Full.ini
+++ b/Dev/ACL4SSR_Online_Full.ini
@@ -15,6 +15,8 @@
 ruleset=🧐 开发学习,https://raw.githubusercontent.com/itbencn/ACL4SSR/dev/Dev/Code.list
 ruleset=🧐 开发学习,https://raw.githubusercontent.com/itbencn/ACL4SSR/dev/Dev/Server.list
 ruleset=🧐 开发学习,https://raw.githubusercontent.com/itbencn/ACL4SSR/dev/Dev/Vpn.list
+ruleset=🧐 开发学习,https://raw.githubusercontent.com/itbencn/ACL4SSR/dev/Dev/Im.list
+ruleset=🧐 开发学习,https://raw.githubusercontent.com/itbencn/ACL4SSR/dev/Dev/Coin.list
 ruleset=🧐 开发学习,https://raw.githubusercontent.com/itbencn/ACL4SSR/dev/Dev/Other.list
 ruleset=🤡 人工智能,https://raw.githubusercontent.com/itbencn/ACL4SSR/dev/Dev/Ai.list
 ruleset=💻 远程桌面,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/RemoteDesktop.list
